Table Users {
  id uuid [pk]
  email varchar [unique, not null]
  password_hash varchar [not null]
  created_at timestamp
  updated_at timestamp
}

Table UserPreferences {
  id uuid [pk]
  user_id uuid [ref: > Users.id]
  theme varchar [default: 'light', note: 'light | dark | system']
  language varchar [default: 'en', note: 'en | es']
  created_at timestamp
}

Table Attributes {
  id uuid [pk]
  category_id uuid [ref: > AttributeCategories.id]
  name varchar [unique, not null]
  value jsonb [not null, note: 'The value of the attribute, stored as JSON. The structure of the JSON depends on the type of the attribute.']
  type_id uuid [ref: > AttributeTypes.id]
  is_builtin boolean [default: false]
  created_at timestamp
}

Table AttributeTypes{
  id uuid [pk]
  name varchar [unique, not null, note: 'string | text | image | numeric | date | period | boolean | dropdown']
}

Table AttributeCategories {
  id uuid [pk]
  name varchar [unique, not null, note: 'Certification, Soft Skills, etc.']
}

Table AttributeDropdownOptions {
  id uuid [pk]
  attribute_id uuid [ref: > Attributes.id]
  label varchar [not null]
  note: 'Only for dropdown type attributes'
}

Table ProfileAttributes {
  id uuid [pk]
  user_id uuid [ref: > Users.id]
  attribute_id uuid [ref: > Attributes.id]
  value jsonb [not null, note: 'The value of the attribute, stored as JSON. The structure of the JSON depends on the type of the attribute.']
  created_at timestamp
  updated_at timestamp

  indexes {
    (user_id, attribute_id) [unique]
  }
}

Table Projects {
  id uuid [pk]
  user_id uuid [ref: > Users.id]
  name varchar [not null]
  start_date date
  end_date date
  description text [note: 'Markdown formatted']
  created_at timestamp
  updated_at timestamp
}

Table TechnologyTags {
  id uuid [pk]
  name varchar [unique, not null]
}

Table ProjectTechnologyTags {
  project_id uuid [ref: > Projects.id]
  tag_id uuid [ref: > TechnologyTags.id]

  indexes {
    (project_id, tag_id) [pk]
  }
}